# IsoScape

./: .env.example  .gitignore  LICENSE
backend/: ARCHITECTURE.md  README.md  main.py  pyproject.toml  requirements.txt
backend/agents/: gemini_llm_agent.py  llm_agent_interface.py
backend/controllers/: isometric_controller.py
backend/core/interfaces/: LllmAgentInterface.py
backend/core/schemas/: HandlerResponse.py  LlmAgentConfig.py  LlmAgentResponse.py  UserRequest.py  UserResponse.py
backend/services/: isometric_service.py
backend/src/: __init__.py  main.py
backend/src/LlmAgents/gemini/: GeminiConfig.py  GeminiImageAgent.py
backend/src/Utils/: bytes_utils.py
backend/src/agents/: gemini_llm_agent.py
backend/src/controllers/: ImageGenerationController.py  isometric_controller.py
backend/src/models/: schemas.py
backend/src/services/: isometric_service.py
backend/src/src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/pages/: Generator.jsx  Home.jsx
